--- a/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
+++ b/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
@@ -67,5 +67,8 @@
     float: right;
 }
 .media-list>ul>li.play{
-    background-color: #efefef;
+    border-left: 0.2rem solid #0894ec;
+}
+.media-list>ul>li{
+    border-left: 0.2rem solid transparent;
 }
