--- a/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
+++ b/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
@@ -2,8 +2,14 @@ template{
     display: none;
 }
 
+.page-group{
+    width: 100%;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
 .video {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 0;
     padding-bottom: 56.25%;
@@ -24,7 +30,7 @@ template{
 }
 
 .buttons-tab {
-    position: fixed;
+    position: absolute;
     width: 100%;
     padding-top: 56.25%;
     z-index: 100;
