--- a/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
+++ b/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
@@ -1,11 +1,28 @@
-template{
+template {
     display: none;
 }
 
-.page-group{
+.page-group {
     width: 100%;
-    max-width: 700px;
-    margin: 0 auto;
+}
+
+@media screen and (min-width: 700px) {
+    body {
+        width: 700px;
+        transform: translateX(-50%);
+        left: 50%;
+
+    }
+
+    html {
+        height: 100%;
+        background: repeating-radial-gradient(#b8e7bf, #b8e7bf 5px, white 5px, white 10px);
+        background: linear-gradient(to bottom, #8dd2d9 , #58c0c7);
+    }
+}
+
+.list-block .item-content {
+    cursor: pointer;
 }
 
 .video {
@@ -67,17 +84,21 @@ template{
     color: #6d6d72;
     padding: 0;
 }
-.searchbar .button:active{
+
+.searchbar .button:active {
     background-color: transparent;
     opacity: 0.7;
 }
-.action-search{
+
+.action-search {
     font-size: 0.9em;
     float: right;
 }
-.media-list>ul>li.play{
+
+.media-list > ul > li.play {
     border-left: 0.2rem solid #0894ec;
 }
-.media-list>ul>li{
+
+.media-list > ul > li {
     border-left: 0.2rem solid transparent;
 }
