--- a/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
+++ b/nginx 1.7.11.3 Gryphon/vod_server/www/index.css
@@ -53,6 +53,11 @@ template {
     z-index: 100;
 }
 
+.buttons-tab .tab-link-about{
+    -webkit-box-flex: inherit;
+    width: auto;
+}
+
 .tabs {
     padding-top: calc(56.25% + 2.5rem);
     padding-bottom: 0.5rem;
